--- a/robospice-sample-ui-spicelist/res/values/strings.xml
+++ b/robospice-sample-ui-spicelist/res/values/strings.xml
@@ -2,6 +2,7 @@
 
     <string name="app_name">RoboSpice SpiceList Sample</string>
     <string name="loading_please_wait">Loading Tweets &#8230; </string>
+    <string name="content_picture">Tweeter picture</string>
 
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
