Updgrade Retrofit sample to use retrofit 1.0.1

--- a/robospice-sample-retrofit/res/values/strings.xml
+++ b/robospice-sample-retrofit/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="hello">Hello RoboSpice!</string>
     <string name="app_name">RoboSpice Retrofit sample</string>
-    <string name="textview_text">Last tweet :</string>
+    <string name="textview_text">RoboSpice contributors :</string>
 </resources>
