Update spicelist sample.

--- a/robospice-sample-ui-spicelist/res/values/strings.xml
+++ b/robospice-sample-ui-spicelist/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">RoboSpice SpiceList Sample</string>
-    <string name="loading_please_wait">Loading Tweets &#8230; </string>
-    <string name="content_picture">Tweeter picture</string>
+    <string name="loading_please_wait">Loading GitHubUsers about android &#8230; </string>
+    <string name="content_picture">User gravatar</string>
 
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
